# braid

./: .gitignore  README.md
braid-firmware/: .clang-format  README.md  partitions.csv  pyproject.toml
braid-firmware/assets/: buses.drawio  packet.json
braid-firmware/examples/arduino/: AllFunctions.ino
braid-firmware/examples/esp-wifi-mqtts/: .gitignore  sdkconfig  sdkconfig.old
braid-firmware/examples/modem-mqtts/: sdkconfig  sdkconfig.old
braid-firmware/master-mcu/: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.devkitC  sdkconfig.t-sim7000  sdkconfig.t-sim7000.old
braid-firmware/master-mcu/src/: CMakeLists.txt  atca_config.h  defines.h  idf_component.yml  log_extra.h  main.cpp  main.h
braid-firmware/scripts/: decode_esp32_stacktrace.py  gen_partition_table.py  generate_build_flags.py  generate_factory_data.py  generate_meta_json.py  mosquitto.conf  send_factory_data.py  shadow.json  start_mosquitto.sh
braid-firmware/scripts/esp_cryptoauth_utility/: .gitignore  MANIFEST.in  README.md  requirements.txt  secure_cert_mfg.py  setup.py
braid-firmware/sensors-mcu/: .gitignore  .mxproject  .project  CMakeLists.txt  README.md  platformio.ini  sensors-mcu.ioc  stm32pio.ini
braid-firmware/sensors-mcu/Inc/: factory_data.h  flash.h  i2c.h  main.h  rtc.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h  usart.h
braid-firmware/sensors-mcu/Src/: factory_data.c  flash.c  gpio.c  i2c.c  main.c  rtc.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  usart.c
braid-firmware/shared/: library.json
braid-firmware/shared/src/: build_config.h  crc.c  crc.h  (+8 more)
(+131 files in other folders)
